# Roc-Master

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  TODO  archive.json.in  build.ps1
.github/workflows/: NewVersionRelease.yml
cmake/: FindBuildSystem.cmake
components/Duckx/: CMakeLists.txt
components/Duilib/: CMakeLists.txt  UIlib.h
components/Duilib/Control/: UIEdit.cpp
components/HDBridge/: .clang-format  CMakeLists.txt
components/HDBridge/boards/NetworkMulti/: CMakeLists.txt
components/HDBridge/boards/NetworkMulti/include/HDBridge/: NetworkMulti.h
components/HDBridge/boards/TOFDPort/: CMakeLists.txt  TOFDPort.cpp
components/HDBridge/boards/TOFDPort/include/HDBridge/: TOFDPort.h
components/HDBridge/include/: HDBridge.h
components/HDBridge/include/HDBridge/: Utils.h
components/freetype/: CMakeLists.txt
components/glew/: CMakeLists.txt
components/glm/: CMakeLists.txt
components/jsoncpp/: CMakeLists.txt
components/libcurl/: CMakeLists.txt
components/rttr-0.9.6/: CMakeLists.txt
components/rttr-0.9.6/CMake/: config.cmake
components/snap7/: CMakeLists.txt
components/spdlog-1.12.0/: CMakeLists.txt
components/sqlite3_orm/: CMakeLists.txt
docker/: DockerFile  packages.config
docs/: 编译方法.md  苏州罗科莱管材探伤机软件使用说明书.md
script/: PackInstaller.ps1  pack-installer.iss.in
src/: AbsPLCIntf.cpp  AbsPLCIntf.h  FragmentLoader.hpp  MainProcess.cpp  MainProcess.h  Thread.cpp  Thread.h  ToolFunc.cpp  ToolFunc.h  pch.h
src/Model/: DefectInfo.cpp  DefectInfo.h  ScanRecord.h  SystemConfig.h
src/UI/: ChannelSettingWnd.cpp  DefectsListWnd.cpp  MainFrameWnd.cpp  MainFrameWnd.h  RecordSelectListViewWnd.cpp  RecordSelectListViewWnd.h  SettingWnd.cpp  SoundVelocityCalibration.cpp  SoundVelocityCalibration.h
src/Widgets/: MeshAscan.cpp  MeshAscan.h  ModelGroupCScan.cpp  ModelGroupCScan.h  OpenGL.cpp
src/res/Theme/: UI_ChannelSettingWnd.xml  UI_DefectsListWnd.xml  UI_MainFrameWnd.xml  UI_RecordSelectListViewWnd.xml  UI_SettingWnd.xml  UI_SoundVelocityCalibration.xml
template/: template.docx
